# pedestal

./: README.md  pyproject.toml  requirements.txt
docs/: developer-guide.md  plinth-complete-guide.md
src/plinth/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  injector.py  logger.py  packages.py  state.py  templates.py
src/plinth/commands/: __init__.py  add.py  doctor.py  init.py  list.py  remove.py
src/plinth/templates/base/: .gitignore  README.md.j2
src/plinth/templates/base/src/: __init__.py
src/plinth/templates/base/src/api/v1/: health.py
src/plinth/templates/base/src/core/: registry.py
